# VA_BuildDay

./: .env.example  .gitignore  CLAUDE.md  build_day.md  pyproject.toml
agent/: __init__.py  __main__.py  cli.py  safety.py  server.py
agent/audio/: __init__.py  transport.py
agent/obs/: __init__.py  langfuse_client.py  log.py
agent/pipeline/: __init__.py  builder.py  frames.py
agent/runtime/: __init__.py  dialer.py  tunnel.py
agent/types/: __init__.py  order.py  result.py
docs/superpowers/plans/: 2026-04-26-pizza-voice-agent.md
docs/superpowers/specs/: 2026-04-26-pizza-voice-agent-design.md
tests/: conftest.py  test_audio_resample.py  test_dialer.py  test_frames.py  test_log_redaction.py  test_order_schema.py  test_pipecat_smoke.py  test_result_schema.py  test_safety.py  test_server.py
